<resources>
    <string name="app_name">TDSMH_P1P6_VMG</string>
    <string name="p1t1">Ingresa tus datos</string>
    <string name="p1lbl1nombre">Nombre</string>
    <string name="p1lbl2edad">Edad</string>
    <string name="p1lbl3correo">Correo</string>
    <string name="p1lbl4telefono">Telefono</string>
    <string name="p1h1nombre">Aqui tu nombre</string>
    <string name="p1h2edad">Aqui tu edad</string>
    <string name="p1h3correo">Aqui tu correo</string>
    <string name="p1h4telefono">Aqui tu telefono</string>
    <string name="p1btn1">Enviar</string>

    <string name="p2t1">Tus datos son</string>
    <string name="p2lbl1">Ya puedes tomar</string>
    <string name="p2lbl2">Aun no puedes tomar</string>

</resources>