<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/p1t1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/p1h1nombre"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/p1lbl1nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/p1lbl2edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnombre" />

    <EditText
        android:id="@+id/txtedad"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="age"
        android:ems="10"
        android:hint="@string/p1h2edad"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/p1lbl3correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtedad" />

    <EditText
        android:id="@+id/txtcorreo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="mail"
        android:ems="10"
        android:hint="@string/p1h3correo"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/p1lbl4telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcorreo" />

    <EditText
        android:id="@+id/txttelefono"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/p1h4telefono"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn1enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/p1btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttelefono" />
</androidx.constraintlayout.widget.ConstraintLayout>